--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parse": "^0.1.0",
     "express": "^4.16.4",
     "pug": "^2.0.3"
   },
