--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "pug": "^2.0.3"
   },
