Start adding the mongodb connection

--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "mongodb": "^3.1.13",
     "pug": "^2.0.3"
   },
   "devDependencies": {
